# ChangeLog for media-libs/speex
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.85 2008/04/17 10:16:54 armin76 Exp $

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> speex-1.2_beta3_p2.ebuild:
  ia64 stable

  17 Apr 2008; Markus Meier <maekke@gentoo.org> speex-1.2_beta3_p2.ebuild:
  x86 stable, bug #217715

  16 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  ppc stable, bug #217715

  15 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  Stable on alpha, bug #217715 (this time for real)

  15 Apr 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #217715

  15 Apr 2008; Samuli Suominen <drac@gentoo.org> speex-1.2_beta3_p2.ebuild:
  amd64 stable wrt #217715, thanks to VQuickSilver@Freenode for testing.

  15 Apr 2008; Markus Rothe <corsair@gentoo.org> speex-1.2_beta3_p2.ebuild:
  Stable on ppc64; bug #217715

  15 Apr 2008; Jeroen Roovers <jer@gentoo.org> speex-1.2_beta3_p2.ebuild:
  Stable for HPPA (bug #217715).

  15 Apr 2008; Ferris McCormick <fmccor@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  Sparc stable, security Bug #217715.

*speex-1.2_beta3_p2 (15 Apr 2008)

  15 Apr 2008; Samuli Suominen <drac@gentoo.org> -speex-1.1.7.ebuild,
  +speex-1.2_beta3_p2.ebuild:
  Version bump.

  10 Jan 2008; Samuli Suominen <drac@gentoo.org> speex-1.1.7.ebuild,
  -speex-1.1.11.1.ebuild, -speex-1.2_beta2.ebuild:
  Remove old versions, leave one ebuild for mips wrt #204405

  09 Jan 2008; Jeroen Roovers <jer@gentoo.org> speex-1.2_beta3.ebuild:
  Stable for HPPA (bug #204405).

  06 Jan 2008; Raúl Porcel <armin76@gentoo.org> speex-1.2_beta3.ebuild:
  alpha/ia64 stable wrt #204405

  05 Jan 2008; nixnut <nixnut@gentoo.org> speex-1.2_beta3.ebuild:
  Stable on ppc wrt bug 204405

  05 Jan 2008; Brent Baude <ranger@gentoo.org> speex-1.2_beta3.ebuild:
  Marking speex-1.2_beta3 ppc64 for bug 204405
