@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/speex-1.2_beta3_p2.ebuild,v 1.9 2008/04/17 10:16:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/speex-1.2_beta3_p2.ebuild,v 1.10 2008/06/16 11:01:24 flameeyes Exp $
 
 EAPI="prefix"
 
@@ -26,6 +26,10 @@ src_unpack() {
 	unpack ${A}
 	cd "${S}"
 	epatch "${FILESDIR}"/${PN}-1.2_beta3-configure.patch
+
+	sed -i -e 's:noinst_PROGRAMS:check_PROGRAMS:' \
+		"${S}"/libspeex/Makefile.am \
+		|| die "unable to disable tests building"
 	eautoreconf
 }
 
